# fltx

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README2.md  VSWorkspaceSettings.json  vcpkg-configuration.json  vcpkg.json
examples/: CMakeLists.txt  basic_example.cpp  basic_usage.cpp  example_basic.cpp  example_consteval_derivative_weights.cpp  example_consteval_ellipse.cpp  example_consteval_math.cpp  example_consteval_robust_geometry.cpp  example_constexpr_io.cpp  example_coverage.cpp  example_dispatch.cpp  example_mandelbrot.cpp  example_random.cpp  example_viewer.h
tests/: CMakeLists.txt  benchmark_chart_writer.h  generated_constexpr_cases.h  test_constexpr_match_stress.cpp  test_f128_bench.cpp  test_f128_constexpr_parity.cpp  test_f128_io.cpp  test_f128_math.cpp  test_f256_bench.cpp  test_f256_constexpr_parity.cpp  test_f256_io.cpp  test_f256_math.cpp  test_f256_parse_bench.cpp  test_f32_bench.cpp  test_f32_constexpr_parity.cpp  test_f32_math.cpp  test_f64_bench.cpp  test_f64_constexpr_parity.cpp  test_f64_math.cpp  test_fltx_consistency.cpp  test_fltx_constexpr.cpp  test_fltx_dispatch.cpp  test_macro_status.cpp  test_mpfr_precision_sanity.cpp
tests/accuracy/: accuracy_f128.cpp  accuracy_f256.cpp
tests/bench/: benchmark_chart_writer.h  test_f128_bench.cpp  test_f256_bench.cpp  test_f256_parse_bench.cpp  test_f32_bench.cpp  test_f64_bench.cpp
tests/binary_size/: CMakeLists.txt  callsite_stress.cpp  report_binary_size.py
tests/constexpr_parity/: test_f128_constexpr_parity.cpp  test_f256_constexpr_parity.cpp  test_f32_constexpr_parity.cpp  test_f64_constexpr_parity.cpp  test_fltx_constexpr_mpfr.cpp  test_parity_macro_status.cpp
tests/expressions/f256/: CMakeLists.txt  f256_expression_bench_cases.cmake  run_compile_bench.cmake
tests/hash/: test_hash.cpp
tests/io/: test_f128_io.cpp  test_f256_io.cpp  test_standard_integration.cpp
tests/metrics/: metrics_case_output.cpp  metrics_case_output.h  metrics_config.h  metrics_domain_samples.h  metrics_f128_accuracy.cpp  metrics_f128_bench.cpp  metrics_f128_domain.cpp  metrics_f128_primary.h  metrics_f128_primary_cases.h  metrics_f256_accuracy.cpp  metrics_f256_bench.cpp  metrics_f256_domain.cpp  metrics_f256_primary.h  metrics_filter_tests.cpp  metrics_io.cpp  metrics_io.h  metrics_main.cpp  metrics_mixed.cpp  metrics_mixed_workloads.h  metrics_qdpp.h  metrics_records.h  metrics_reference.h  metrics_report.h  metrics_samples.h  metrics_std_special_oracle.h  metrics_types.h
tests/precision/: test_f128_math.cpp  test_f256_expression_semantics.cpp  test_f256_math.cpp  test_f32_math.cpp  test_f64_math.cpp  test_mpfr_precision_sanity.cpp
tests/quality/: test_quality_harness.cpp
tests/random/: random_print_utils.h  test_f128_random.cpp  test_f256_random.cpp
tests/unit_build_tests/: CMakeLists.txt
tests/unit_build_tests/f128_io/: isolated_f128_parse.cpp  isolated_f128_to_string.cpp  main.cpp
tests/unit_build_tests/f128_math/: isolated_f128_abs.cpp  isolated_f128_acos.cpp  isolated_f128_asin.cpp  isolated_f128_atan.cpp  isolated_f128_ceil.cpp  isolated_f128_exp.cpp  isolated_f128_expm1.cpp  isolated_f128_fmod.cpp  isolated_f128_frexp.cpp  isolated_f128_ilogb.cpp  isolated_f128_isinf.cpp  isolated_f128_ldexp.cpp  isolated_f128_logb.cpp  isolated_f128_pow_double.cpp  isolated_f128_sincos.cpp  main.cpp
tests/unit_build_tests/f256_io/: isolated_f256_parse.cpp  isolated_f256_to_string.cpp  main.cpp
tests/unit_build_tests/f256_math/: isolated_f256_acos.cpp  isolated_f256_acosh.cpp  isolated_f256_atan2.cpp  isolated_f256_ceil.cpp  isolated_f256_f128_interop_f128_first.cpp  isolated_f256_f128_interop_f256_first.cpp  isolated_f256_fdim.cpp  isolated_f256_fma.cpp  isolated_f256_hypot.cpp  isolated_f256_isfinite.cpp  isolated_f256_isinf.cpp  isolated_f256_ldexp.cpp  isolated_f256_llround.cpp  isolated_f256_log1p.cpp  isolated_f256_lrint.cpp  isolated_f256_modf.cpp  isolated_f256_nextafter.cpp  isolated_f256_remainder.cpp  isolated_f256_remquo.cpp  isolated_f256_scalbln.cpp  isolated_f256_scalbn.cpp  isolated_f256_sin.cpp  isolated_f256_sinh.cpp  isolated_runtime.h  main.cpp
tests/unit_compile_tests/: CMakeLists.txt
tests/unit_compile_tests/f128/: isolated_f128_abs.cpp  isolated_f128_acos.cpp  isolated_f128_acosh.cpp  isolated_f128_asin.cpp  isolated_f128_asinh.cpp  isolated_f128_atan.cpp  isolated_f128_atan2.cpp  isolated_f128_atanh.cpp  isolated_f128_cbrt.cpp  isolated_f128_ceil.cpp  isolated_f128_copysign.cpp  isolated_f128_cos.cpp  isolated_f128_cosh.cpp  isolated_f128_erf.cpp  isolated_f128_erfc.cpp  isolated_f128_exp.cpp  isolated_f128_exp2.cpp  isolated_f128_expm1.cpp  isolated_f128_fabs.cpp  isolated_f128_fdim.cpp  isolated_f128_floor.cpp  isolated_f128_fma.cpp  isolated_f128_fmax.cpp  isolated_f128_fmin.cpp  isolated_f128_fmod.cpp  isolated_f128_fpclassify.cpp  isolated_f128_frexp.cpp  isolated_f128_hypot.cpp  isolated_f128_ilogb.cpp  isolated_f128_isfinite.cpp  isolated_f128_isgreater.cpp  isolated_f128_isgreaterequal.cpp  isolated_f128_isinf.cpp  isolated_f128_isless.cpp  isolated_f128_islessequal.cpp  isolated_f128_islessgreater.cpp  isolated_f128_isnan.cpp  isolated_f128_isnormal.cpp  isolated_f128_isunordered.cpp  isolated_f128_ldexp.cpp  (+34 more)
tests/unit_compile_tests/f256/: isolated_f256_abs.cpp  isolated_f256_acos.cpp  isolated_f256_acosh.cpp  isolated_f256_asin.cpp  isolated_f256_asinh.cpp  isolated_f256_atan.cpp  isolated_f256_atan2.cpp  isolated_f256_atanh.cpp  isolated_f256_cbrt.cpp  isolated_f256_ceil.cpp  isolated_f256_copysign.cpp  isolated_f256_cos.cpp  isolated_f256_cosh.cpp  isolated_f256_erf.cpp  isolated_f256_erfc.cpp  isolated_f256_exp.cpp  isolated_f256_exp2.cpp  isolated_f256_expm1.cpp  isolated_f256_f128_interop_f128_first.cpp  isolated_f256_f128_interop_f256_first.cpp  isolated_f256_fabs.cpp  isolated_f256_fdim.cpp  isolated_f256_floor.cpp  isolated_f256_fma.cpp  isolated_f256_fmax.cpp  isolated_f256_fmin.cpp  isolated_f256_fmod.cpp  isolated_f256_fpclassify.cpp  isolated_f256_frexp.cpp  isolated_f256_hypot.cpp  isolated_f256_ilogb.cpp  isolated_f256_isfinite.cpp  (+43 more)
(+311 files in other folders)
